[package]
name = "hello-algo"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "iteration"
path = "chapter_computational_complexity/iteration.rs"

[[bin]]
name = "recursion"
path = "chapter_computational_complexity/recursion.rs"

[[bin]]
name = "space_complexity"
path = "chapter_computational_complexity/space_complexity.rs"

# Run Command: cargo run --bin array
[[bin]]
name = "array"
path = "chapter_array_and_linkedlist/array.rs"

# Run Command: cargo run --bin linked_list
[[bin]]
name = "linked_list"
path = "chapter_array_and_linkedlist/linked_list.rs"

# Run Command: cargo run --bin list
[[bin]]
name = "list"
path = "chapter_array_and_linkedlist/list.rs"

[[bin]]
name = "stack"
path = "chapter_stack_and_queue/stack.rs"

[[bin]]
name = "linkedlist_stack"
path = "chapter_stack_and_queue/linkedlist_stack.rs"

[[bin]]
name = "array_stack"
path = "chapter_stack_and_queue/array_stack.rs"

[[bin]]
name = "queue"
path = "chapter_stack_and_queue/queue.rs"

[[bin]]
name = "linkedlist_queue"
path = "chapter_stack_and_queue/linkedlist_queue.rs"

[[bin]]
name = "array_queue"
path = "chapter_stack_and_queue/array_queue.rs"

[[bin]]
name = "deque"
path = "chapter_stack_and_queue/deque.rs"

# [[bin]]
# name = "linkedlist_deque"
# path = "chapter_stack_and_queue/linkedlist_deque.rs"


# [[bin]]
# name = "array_deque"
# path = "chapter_stack_and_queue/array_deque.rs"

[[bin]]
name = "hash_map"
path = "chapter_hashing/hash_map.rs"

[[bin]]
name = "hash_map_chaining"
path = "chapter_hashing/hash_map_chaining.rs"

[[bin]]
name = "hash_map_open_addressing"
path = "chapter_hashing/hash_map_open_addressing.rs"

[[bin]]
name = "simple_hash"
path = "chapter_hashing/simple_hash.rs"

[[bin]]
name = "binary_tree"
path = "chapter_tree/binary_tree.rs"

[[bin]]
name = "array_binary_tree"
path = "chapter_tree/array_binary_tree.rs"

[[bin]]
name = "binary_tree_bfs"
path = "chapter_tree/binary_tree_bfs.rs"

[[bin]]
name = "binary_tree_dfs"
path = "chapter_tree/binary_tree_dfs.rs"

[[bin]]
name = "binary_search_tree"
path = "chapter_tree/binary_search_tree.rs"

[[bin]]
name = "avl_tree"
path = "chapter_tree/avl_tree.rs"

[[bin]]
name = "heap"
path = "chapter_heap/heap.rs"

[[bin]]
name = "my_heap"
path = "chapter_heap/my_heap.rs"

[[bin]]
name = "top_k"
path = "chapter_heap/top_k.rs"

[[bin]]
name = "graph_adjacency_matrix"
path = "chapter_graph/graph_adjacency_matrix.rs"

[[bin]]
name = "graph_adjacency_list"
path = "chapter_graph/graph_adjacency_list.rs"

[[bin]]
name = "graph_bfs"
path = "chapter_graph/graph_bfs.rs"

[[bin]]
name = "graph_dfs"
path = "chapter_graph/graph_dfs.rs"

[[bin]]
name = "binary_search"
path = "chapter_searching/binary_search.rs"

[[bin]]
name = "binary_search_insertion"
path = "chapter_searching/binary_search_insertion.rs"

[[bin]]
name = "binary_search_edge"
path = "chapter_searching/binary_search_edge.rs"

[[bin]]
name = "two_sum"
path = "chapter_searching/two_sum.rs"

[[bin]]
name = "selection_sort"
path = "chapter_sorting/selection_sort.rs"

[[bin]]
name = "bubble_sort"
path = "chapter_sorting/bubble_sort.rs"

[[bin]]
name = "insertion_sort"
path = "chapter_sorting/insertion_sort.rs"

[[bin]]
name = "quick_sort"
path = "chapter_sorting/quick_sort.rs"

[dependencies]
rand = "0.8.5"
